# fovi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-docs.txt
.github/workflows/: static.yml
config/: cnnalexnet.yaml  default.yaml  dinov3_logpolar_control.yaml  dinov3_uniform_control.yaml  fovi-dinov3.yaml  fovi-dinov3_weak_control.yaml  fovi-vit.yaml  fovi_alexnet.yaml  lp-cnn-alexnet.yaml  lp-fovi-alexnet.yaml
config/data/: IN100.yaml  IN1000.yaml
config/pretrained/: fovi-alexnet_a-1_res-64_rfmult-1_in1k.yaml  fovi-alexnet_a-1_res-64_rfmult-2_in1k.yaml  fovi-dinov3-hplus_a-2.78_res-64_in1k.yaml  fovi-dinov3-splus_a-2.78_res-64_in1k.yaml  fovi-dinov3-splus_a-60.94_res-64_in1k.yaml
config/pretrained_model/: dinov3_finetune_layers-102345.yaml  dinov3_freeze.yaml  dinov3_lora_layers-1012345.yaml  dinov3_scratch.yaml  dinov3_unfreeze.yaml
docs/: Makefile  conf.py  examples.rst  index.rst  make.bat  quickstart.rst  read_me.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: fovi.arch.alexnet.rst  fovi.arch.architectures.rst  fovi.arch.convnextv2.rst  fovi.arch.dinov3.rst  fovi.arch.knn.rst  fovi.arch.knnalexnet.rst  fovi.arch.knnconvnextv2.rst  fovi.arch.knnresnet.rst  fovi.arch.knnvit.rst  fovi.arch.mlp.rst  fovi.arch.norm.rst  fovi.arch.polar.rst  (+35 more)
fovi/: __init__.py  demo.py  fovinet.py  hub.py  paths.py  probes.py  requirements.txt  trainer.py  visualizer.py
notebooks/: step4_get_activations.ipynb
scripts/: clean_docs.sh  generate_docs.py  generate_rst_structure.py  run_slurm.sbatch  solve_cmf_a.py  train.py  train.sh
(+45 files in other folders)
